# Rubic-Cube-Simulator

./: .gitignore  CMakeLists.txt  main.cpp  xmake.lua
APP/: App.cpp  App.h
COMMON/: Config.h  CubeError.cpp  CubeError.h  ICommandBase.h  INotification.h  Macro.h  Notification.h  SolverError.cpp  SolverError.h  types.cpp  types.h  utilities.cpp  utilities.h
MODEL/: Cube.cpp  Cube.h  CubeModel.cpp  CubeModel.h
VIEW/: Input.cpp  Input.h  MainWindow.cpp  MainWindow.h  Rendering.cpp  Rendering.h
VIEW/events/: EventCallback.cpp  EventCallback.h
VIEW/render/: Renderer.cpp  Renderer.h
VIEW/rotani/: RotAni.cpp  RotAni.h
VIEW/sinks/: MainWindowSink.cpp  MainWindowSink.h
VIEWMODEL/: CommandHandlers.cpp  CommandHandlers.h  RotateController.cpp  RotateController.h  StepFilter.h  ViewModel.cpp  ViewModel.h
VIEWMODEL/commands/: LoadCommand.cpp  LoadCommand.h  RandomCommand.cpp  RandomCommand.h  ResetCommand.cpp  ResetCommand.h  RotEndCommand.cpp  RotEndCommand.h  RotateCommand.cpp  RotateCommand.h  SaveCommand.cpp  SaveCommand.h  SolveCommand.cpp  SolveCommand.h  StopCommand.cpp  StopCommand.h
VIEWMODEL/sinks/: ViewModelSink.cpp  ViewModelSink.h
VIEWMODEL/solver/: CubeSolver.cpp  CubeSolver.h  NoXYZFilter.cpp  NoXYZFilter.h  ReduceFilter.cpp  ReduceFilter.h
src/: CMakeLists.txt  Graphics.cpp  MagicCube.cpp  main.cpp  utilities.cpp  utilities.h
src/include/: Graphics.h  MagicCube.h
test/: CMakeLists.txt  main_test.cpp
