CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

# Suppress cmake policy warning
if (APPLE)
    SET(CMAKE_MACOSX_RPATH 0)
endif()

PROJECT(RubicCubeSimulator
        VERSION 0.0.1
        DESCRIPTION "Rubic Cube Simulator"
        LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# Enable CTest
ENABLE_TESTING()

# Check clang-format
IF (NOT DEFINED CLANG_FORMAT_BIN)
    FIND_PROGRAM(CLANG_FORMAT_BIN NAMES clang-format clang-format-12)
ENDIF()
IF ("${CLANG_FORMAT_BIN}" STREQUAL "CLANG_FORMAT_BIN-NOTFOUND")
    MESSAGE(WARNING "Could NOT find clang-format.")
ENDIF()

# Set include directories
SET(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/thirdparty)
SET(SRC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/include)
SET(GTEST_INCLUDE_DIR ${THIRD_PARTY_DIR}/googletest/include)
INCLUDE_DIRECTORIES(${SRC_INCLUDE_DIR} ${TEST_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR} ${GLOG_INCLUDE_DIR})

# Thirdparty module gtest
ADD_SUBDIRECTORY(${THIRD_PARTY_DIR}/googletest ${CMAKE_BINARY_DIR}/googletest-build)
TARGET_COMPILE_OPTIONS(gtest PRIVATE "-fPIC")
TARGET_COMPILE_OPTIONS(gtest_main PRIVATE "-fPIC")

# Subdirectory
ADD_SUBDIRECTORY(src ${CMAKE_BINARY_DIR}/bin)
ADD_SUBDIRECTORY(test ${CMAKE_BINARY_DIR}/test)

